# learning_git_withROS2

./: .gitignore
ros2_openni_ws/install/: local_setup.sh  setup.sh
ros2_openni_ws/install/openni2_camera/include/openni2_camera/openni2_camera/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
ros2_openni_ws/install/openni2_camera/include/openni2_camera/openni2_camera/srv/: get_serial.h  get_serial.hpp
ros2_openni_ws/install/openni2_camera/lib/openni2_camera/: list_devices  openni2_camera_driver
ros2_openni_ws/install/openni2_camera/share/ament_index/resource_index/parent_prefix_path/: openni2_camera
ros2_openni_ws/install/openni2_camera/share/ament_index/resource_index/rosidl_interfaces/: openni2_camera
ros2_openni_ws/install/openni2_camera/share/openni2_camera/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_openni_ws/install/openni2_camera/share/openni2_camera/cmake/: export_openni2_camera__rosidl_generator_pyExport-noconfig.cmake  export_openni2_camera__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_openni2_camera__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_openni2_camera__rosidl_typesupport_fastrtps_cppExport.cmake  openni2_cameraConfig.cmake  openni2_camera__rosidl_typesupport_introspection_cExport-noconfig.cmake  openni2_camera__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
ros2_openni_ws/log/: latest_build
ros2_openni_ws/src/openni2_camera/: README.md
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/cv_bridge/share/ament_index/resource_index/parent_prefix_path/: cv_bridge
ros2_ws/install/cv_bridge/share/cv_bridge/cmake/: cv_bridgeConfig.cmake  export_cv_bridgeExport.cmake
ros2_ws/install/image_geometry/share/image_geometry/: local_setup.sh
ros2_ws/install/opencv_tests/share/opencv_tests/: package.sh
ros2_ws/install/robovision_images/lib/robovision_images/: my_camera_publisher  my_publisher  my_scaled_camera_publisher  my_scaled_publisher  my_subscriber.py
ros2_ws/install/robovision_images/share/robovision_images/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robovision_images/share/robovision_images/cmake/: robovision_imagesConfig.cmake
ros2_ws/install/robovision_interfaces/share/robovision_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robovision_interfaces/share/robovision_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_robovision_interfaces__rosidl_generator_pyExport.cmake  export_robovision_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_robovision_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  robovision_interfaces__rosidl_typesupport_cExport.cmake  robovision_interfaces__rosidl_typesupport_cppExport.cmake  robovision_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws/install/robovision_interfaces/share/robovision_interfaces/msg/: ObjectCentroids.idl  ObjectCentroids.json  ObjectCentroids.msg
ros2_ws/install/robovision_interfaces/share/robovision_interfaces/srv/: GetPointCenter.idl  GetPointCenter.json
ros2_ws/install/robovision_processing/lib/robovision_processing/: my_processing.py
ros2_ws/install/robovision_processing/share/robovision_processing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robovision_processing/share/robovision_processing/cmake/: robovision_processingConfig.cmake
ros2_ws/install/robovision_rgbd/lib/robovision_rgbd/: rgbd_reader.py
ros2_ws/install/robovision_rgbd/share/robovision_rgbd/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robovision_services/lib/robovision_services/: robovision_client  robovision_client.py  robovision_service.py
ros2_ws/install/robovision_services/share/robovision_services/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/robovision_ros2/: README.md
ros2_ws/src/robovision_ros2/data/rosbags/person_dynamic/: metadata.yaml  metadata.yaml:Zone.Identifier
ros2_ws/src/robovision_ros2/data/rosbags/person_static/: metadata.yaml  metadata.yaml:Zone.Identifier  person_static.db3:Zone.Identifier
ros2_ws/src/robovision_ros2/robovision_1/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robovision_ros2/robovision_1/src/: facerecognition.cpp  my_camera_publisher.cpp  my_publisher.cpp  my_scaled_camera_publisher.cpp  my_scaled_publisher.cpp  my_scaled_subscriber.cpp  my_subscriber.cpp
ros2_ws/src/robovision_ros2/robovision_2/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robovision_ros2/robovision_2/src/: my_processing.cpp
ros2_ws/src/robovision_ros2/robovision_3/: CMakeLists.txt  README.md
ros2_ws/src/robovision_ros2/robovision_3/src/: rgbd_reader.cpp  rgbd_reader_faceRecog.cpp  rgbd_reader_faceRecog2.cpp  rgbd_reader_faceRecog_tracking.cpp  rgbd_reader_faceRecog_tracking2.cpp
ros2_ws/src/robovision_ros2/robovision_4/: CMakeLists.txt  README.md
ros2_ws/src/robovision_ros2/robovision_4/src/: robovision_client.cpp  robovision_service.cpp
ros2_ws/src/robovision_ros2/robovision_interfaces/: CMakeLists.txt
(+45 files in other folders)
